--- a/templates/result.html
+++ b/templates/result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verdict Map</title>
+    <title>Bangla Math Cheacker</title>
     <style>
         table {
             width: 50%;
